fix(css): make bg lighter for more bg & text contrast

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,7 +69,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ddd;
+    background-color: #eee;
   }
   a:hover {
     color: #747bff;
